# ForenScope

./: .gitconfig  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: release.yml  test.yml
api/: main.py  ui.py
artifacts/: browser.py  evtx.py  registry.py
cli/: main.py
contracts/: engine.proto
core/: artifact.py
core/rpc/: engine_pb2.py  engine_pb2_grpc.py
docs/: BUILD.md
engine/: go.mod  go.sum  main.go
engine/carver/: carver.go  carver_test.go
engine/hasher/: hasher.go  hasher_test.go
engine/proto/: engine.pb.go  engine_grpc.pb.go
engine/scanner/: local.go  scanner_test.go  signatures.go  yara.go  yara_stub.go
engine/worker/: pool.go  pool_test.go
orchestrator/: client.py
reporting/: generator.py
reporting/templates/: dashboard.html  recovered.html  report.html  style.css
reports/: job_20260107003429.html  job_20260107003429.json  job_20260107013956.html  job_20260107013956.json
test_reports/: test_report.html  test_report.json
tests/: test_browser.py  test_core.py  test_registry.py  test_reporting_e2e.py
timeline/: builder.py
