[project]
name = "forenscope"
version = "0.1.0"
description = "Professional-grade hybrid digital forensics platform"
authors = [
    {name = "Ismail Tasdelen", email = "your.email@example.com"},
]
requires-python = ">=3.10"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
